# repo-preflight

./: .repo-preflight.toml.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
docs/devlogs/: 2026-02-25-v0.1.11.md  2026-02-25-v0.1.9.md
src/repo_preflight/: checks.py  cli.py  config.py  rulepacks.py
tests/: test_checks.py  test_cli.py  test_config.py  test_version_sync.py
